--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "YouTube Subtitle Word Translator",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Open English or other language subtitles on YouTube, find unfamiliar words? Click, translate to your chosen language.",
   "permissions": ["storage", "activeTab"],
   "background": {
@@ -11,7 +11,9 @@
   "icons": {
     "128": "icon.png"
   },
-  "action": { "default_popup": "index.html" },
+  "action": {
+    "default_popup": "index.html"
+  },
   "content_scripts": [
     {
       "js": ["content.js"],
